--- a/src/main/resources/com/example/project3/MainView.fxml
+++ b/src/main/resources/com/example/project3/MainView.fxml
@@ -13,10 +13,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="payroll.SampleController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="payroll.SampleController">
     <center>
         <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
             <tabs>
+            <Tab text="Untitled Tab">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
                 <Tab text="Employee Management">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="342.0" prefWidth="470.0">
@@ -38,18 +43,14 @@
                                 <RadioButton fx:id="PartTimeID" layoutX="218.0" layoutY="188.0" mnemonicParsing="false" onMouseClicked="#partClick" text="Part Time" toggleGroup="$empType" />
                                 <RadioButton fx:id="ManagementID" layoutX="365.0" layoutY="188.0" mnemonicParsing="false" onMouseClicked="#mgmtClick" text="Management" toggleGroup="$empType" />
                                 <Text layoutX="71.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Annual Salary" />
-                                <TextField fx:id="annSal" layoutX="200.0" layoutY="227.0" prefHeight="25.0" prefWidth="219.0" />
-                                <Text layoutX="69.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hours Worked" />
-                                <TextField fx:id="hrsWorked" layoutX="199.0" layoutY="287.0" prefHeight="25.0" prefWidth="71.0" />
-                                <Text layoutX="290.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rate" />
-                                <TextField fx:id="rate" layoutX="345.0" layoutY="287.0" prefHeight="25.0" prefWidth="75.0" />
+                                <TextField fx:id="annSal" layoutX="198.0" layoutY="260.0" prefHeight="25.0" prefWidth="219.0" />
                                 <RadioButton fx:id="managerID" layoutX="50.0" layoutY="346.0" mnemonicParsing="false" text="Manager">
                                     <toggleGroup>
                                         <ToggleGroup fx:id="mgmtType" />
                                     </toggleGroup></RadioButton>
                                 <RadioButton fx:id="depheadID" layoutX="171.0" layoutY="346.0" mnemonicParsing="false" text="Department Head" toggleGroup="$mgmtType" />
                                 <RadioButton fx:id="directorID" layoutX="365.0" layoutY="346.0" mnemonicParsing="false" text="Director" toggleGroup="$mgmtType" />
-                                <Button fx:id="addButton" layoutX="51.0" layoutY="386.0" mnemonicParsing="false" onAction="#add" text="Add Employee" />
+                                <Button fx:id="addButton" layoutX="74.0" layoutY="386.0" mnemonicParsing="false" onAction="#add" text="Add Employee" />
                                 <Button fx:id="removeButton" layoutX="231.0" layoutY="386.0" mnemonicParsing="false" onAction="#remove" text="Remove Employee" />
                                 <Button fx:id="sethrButton" layoutX="465.0" layoutY="386.0" mnemonicParsing="false" onAction="#setHours" text="Set Hours" />
                                 <TextArea fx:id="messageArea1" layoutX="-1.0" layoutY="435.0" prefHeight="213.0" prefWidth="600.0" />
