--- a/src/main/resources/com/example/project3/MainView.fxml
+++ b/src/main/resources/com/example/project3/MainView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
@@ -17,44 +18,58 @@
     <center>
         <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
             <tabs>
-            <Tab text="Untitled Tab">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-              </content>
-            </Tab>
                 <Tab text="Employee Management">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="342.0" prefWidth="470.0">
                             <children>
-                                <RadioButton fx:id="csID" layoutX="200.0" layoutY="78.0" mnemonicParsing="false" text="CS">
+                                <RadioButton fx:id="csID" layoutX="198.0" layoutY="61.0" mnemonicParsing="false" text="CS">
                                     <toggleGroup>
                                         <ToggleGroup fx:id="dep" />
                                     </toggleGroup></RadioButton>
-                                <RadioButton fx:id="itID" layoutX="307.0" layoutY="78.0" mnemonicParsing="false" text="IT" toggleGroup="$dep" />
-                                <RadioButton fx:id="eceID" layoutX="399.0" layoutY="78.0" mnemonicParsing="false" text="ECE" toggleGroup="$dep" />
+                                <RadioButton fx:id="itID" layoutX="256.0" layoutY="61.0" mnemonicParsing="false" text="IT" toggleGroup="$dep" />
+                                <RadioButton fx:id="eceID" layoutX="308.0" layoutY="61.0" mnemonicParsing="false" text="ECE" toggleGroup="$dep" />
                                 <Text layoutX="71.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" wrappingWidth="54.803401947021484" />
-                                <Text layoutX="75.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Department" />
+                                <Text layoutX="66.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Department:" />
                                 <TextField fx:id="name" layoutX="200.0" layoutY="14.0" prefHeight="25.0" prefWidth="219.0" />
-                                <Text layoutX="78.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="com.example.project3.Date Hired" />
-                                <RadioButton fx:id="FullTimeID" layoutX="72.0" layoutY="188.0" mnemonicParsing="false" onMouseClicked="#fullClick" text="Full Time">
+                                <RadioButton fx:id="FullTimeID" layoutX="195.0" layoutY="150.0" mnemonicParsing="false" onMouseClicked="#fullClick" text="Tristate">
                                     <toggleGroup>
                                         <ToggleGroup fx:id="empType" />
                                     </toggleGroup></RadioButton>
-                                <RadioButton fx:id="PartTimeID" layoutX="218.0" layoutY="188.0" mnemonicParsing="false" onMouseClicked="#partClick" text="Part Time" toggleGroup="$empType" />
-                                <RadioButton fx:id="ManagementID" layoutX="365.0" layoutY="188.0" mnemonicParsing="false" onMouseClicked="#mgmtClick" text="Management" toggleGroup="$empType" />
-                                <Text layoutX="71.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Annual Salary" />
+                                <RadioButton fx:id="PartTimeID" layoutX="195.0" layoutY="189.0" mnemonicParsing="false" onMouseClicked="#partClick" prefHeight="18.0" prefWidth="97.0" text="International" toggleGroup="$empType" />
+                                <Text layoutX="67.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Credit Hours" wrappingWidth="82.39453125" />
                                 <TextField fx:id="annSal" layoutX="198.0" layoutY="260.0" prefHeight="25.0" prefWidth="219.0" />
-                                <RadioButton fx:id="managerID" layoutX="50.0" layoutY="346.0" mnemonicParsing="false" text="Manager">
+                                <RadioButton fx:id="managerID" layoutX="196.0" layoutY="112.0" mnemonicParsing="false" text="Resident">
                                     <toggleGroup>
                                         <ToggleGroup fx:id="mgmtType" />
                                     </toggleGroup></RadioButton>
-                                <RadioButton fx:id="depheadID" layoutX="171.0" layoutY="346.0" mnemonicParsing="false" text="Department Head" toggleGroup="$mgmtType" />
-                                <RadioButton fx:id="directorID" layoutX="365.0" layoutY="346.0" mnemonicParsing="false" text="Director" toggleGroup="$mgmtType" />
-                                <Button fx:id="addButton" layoutX="74.0" layoutY="386.0" mnemonicParsing="false" onAction="#add" text="Add Employee" />
-                                <Button fx:id="removeButton" layoutX="231.0" layoutY="386.0" mnemonicParsing="false" onAction="#remove" text="Remove Employee" />
-                                <Button fx:id="sethrButton" layoutX="465.0" layoutY="386.0" mnemonicParsing="false" onAction="#setHours" text="Set Hours" />
+                                <RadioButton fx:id="depheadID" layoutX="301.0" layoutY="112.0" mnemonicParsing="false" text="Non Resident" toggleGroup="$mgmtType" />
+                                <Button fx:id="addButton" layoutX="209.0" layoutY="301.0" mnemonicParsing="false" onAction="#add" text="Add Employee" />
+                                <Button fx:id="removeButton" layoutX="316.0" layoutY="301.0" mnemonicParsing="false" onAction="#remove" text="Remove Employee" />
                                 <TextArea fx:id="messageArea1" layoutX="-1.0" layoutY="435.0" prefHeight="213.0" prefWidth="600.0" />
-                                <DatePicker fx:id="dateHired" layoutX="199.0" layoutY="132.0" prefHeight="25.0" prefWidth="218.0" />
+                        <RadioButton fx:id="eceID1" layoutX="365.0" layoutY="61.0" mnemonicParsing="false" text="ME">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="dep1" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="eceID11" layoutX="419.0" layoutY="61.0" mnemonicParsing="false" text="BA">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="dep11" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <Text layoutX="67.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" wrappingWidth="82.39453125" />
+                        <RadioButton fx:id="PartTimeID1" layoutX="301.0" layoutY="150.0" mnemonicParsing="false" onMouseClicked="#partClick" text="New York">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="empType1" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="PartTimeID2" layoutX="401.0" layoutY="150.0" mnemonicParsing="false" onMouseClicked="#partClick" text="Connecticut">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="empType2" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <CheckBox layoutX="306.0" layoutY="190.0" mnemonicParsing="false" text="Study Abroad" />
+                        <TextField fx:id="annSal1" layoutX="198.0" layoutY="364.0" prefHeight="25.0" prefWidth="219.0" />
+                        <Text layoutX="55.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tuition" wrappingWidth="82.39453125" />
                             </children>
                         </AnchorPane>
                     </content>
@@ -75,10 +90,16 @@
                                 <Button fx:id="printDate" layoutX="207.0" layoutY="234.0" mnemonicParsing="false" onAction="#printByDate" text="PRINT BY DATE" />
                                 <Button fx:id="importButton" layoutX="52.0" layoutY="117.0" mnemonicParsing="false" onAction="#importFile" text="IMPORT" />
                                 <Button fx:id="exportButton" layoutX="52.0" layoutY="200.0" mnemonicParsing="false" onAction="#exportFile" text="EXPORT" />
+                                <DatePicker fx:id="dateHired" layoutX="306.0" layoutY="200.0" prefHeight="25.0" prefWidth="218.0" />
                             </children>
                         </AnchorPane>
                     </content>
                 </Tab>
+            <Tab text="Untitled Tab">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
             </tabs>
         </TabPane>
     </center>
