--- a/src/main/resources/com/example/project3/MainView.fxml
+++ b/src/main/resources/com/example/project3/MainView.fxml
@@ -74,7 +74,7 @@
                         </AnchorPane>
                     </content>
                 </Tab>
-                <Tab text="Employee Database">
+                <Tab text="Payments/Financial Aid">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
