--- a/src/main/resources/com/example/project3/MainView.fxml
+++ b/src/main/resources/com/example/project3/MainView.fxml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project3.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project3.MainController">
     <center>
         <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
             <tabs>
@@ -35,7 +45,7 @@
                                 <RadioButton fx:id="nonresidentID" layoutX="301.0" layoutY="112.0" mnemonicParsing="false" onAction="#nonResidentButtonClick" text="Non Resident" toggleGroup="$status" />
                                 <Button fx:id="addButton" layoutX="195.0" layoutY="301.0" mnemonicParsing="false" onAction="#add" text="Add Student" />
                                 <Button fx:id="removeButton" layoutX="316.0" layoutY="301.0" mnemonicParsing="false" onAction="#remove" text="Remove Student" />
-                                <TextArea fx:id="messageArea1" layoutX="-1.0" layoutY="435.0" prefHeight="213.0" prefWidth="600.0" />
+                                <TextArea fx:id="messageArea1" layoutX="38.0" layoutY="404.0" prefHeight="127.0" prefWidth="521.0" />
                         <RadioButton fx:id="meID" layoutX="365.0" layoutY="61.0" mnemonicParsing="false" text="ME" toggleGroup="$majors" />
                         <RadioButton fx:id="baID" layoutX="419.0" layoutY="61.0" mnemonicParsing="false" text="BA" toggleGroup="$majors" />
                         <Text layoutX="67.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" wrappingWidth="82.39453125" />
@@ -57,7 +67,7 @@
                     <content>
                         <AnchorPane fx:id="paymentDateID" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <TextArea fx:id="messageArea2" layoutX="-2.0" layoutY="285.0" prefHeight="287.0" prefWidth="606.0" />
+                                <TextArea fx:id="messageArea2" layoutX="40.0" layoutY="284.0" prefHeight="168.0" prefWidth="501.0" />
                                 <DatePicker fx:id="paymentDate" layoutX="165.0" layoutY="154.0" prefHeight="25.0" prefWidth="218.0" promptText="Enter the payment date..." />
                                 <RadioButton fx:id="csIDpayment" layoutX="161.0" layoutY="75.0" mnemonicParsing="false" text="CS">
                                     <toggleGroup>
@@ -74,7 +84,7 @@
                                 <Label layoutX="40.0" layoutY="113.0" text="Payment Amount:      $" />
                                 <Label layoutX="40.0" layoutY="158.0" text="Payment Date:" />
                                 <Button layoutX="390.0" layoutY="154.0" mnemonicParsing="false" onAction="#pay" text="Pay" />
-                                <Label layoutX="40.0" layoutY="200.0" text="Financial Aid Amount: $" />
+                                <Label layoutX="40.0" layoutY="200.0" text="Fin Aid Amount:          $" />
                                 <TextField fx:id="finAidID" layoutX="165.0" layoutY="196.0" prefHeight="25.0" prefWidth="215.0" promptText="0.00" />
                                 <Button layoutX="391.0" layoutY="196.0" mnemonicParsing="false" onAction="#finaid" text="Set" />
                             </children>
@@ -90,6 +100,7 @@
                         <Button layoutX="145.0" layoutY="200.0" mnemonicParsing="false" onAction="#print" text="Print Roster" />
                         <Button layoutX="254.0" layoutY="200.0" mnemonicParsing="false" onAction="#printByName" text="Print by Name" />
                         <Button layoutX="367.0" layoutY="200.0" mnemonicParsing="false" onAction="#printByDate" text="Print by Date" />
+                        <TextArea fx:id="messageArea3" layoutX="48.0" layoutY="277.0" prefHeight="193.0" prefWidth="491.0" />
                      </children></AnchorPane>
               </content>
             </Tab>
